--- a/backend/4_model_training.ipynb
+++ b/backend/4_model_training.ipynb
@@ -7,14 +7,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Importing necessary Python Packages\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from sklearn.preprocessing import StandardScaler\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import OrdinalEncoder\n",
     "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix"
+    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix\n",
+    "from sklearn.metrics import confusion_matrix"
    ]
   },
   {
@@ -27,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": null,
    "id": "eb5218d1",
    "metadata": {},
    "outputs": [
@@ -253,13 +257,14 @@
     }
    ],
    "source": [
+    "#Loading the base file data (fetched from json)\n",
     "processed_data = pd.read_csv(r'C:\\Projects\\a_health_data_analysis\\firebase-health-data-analysis\\data\\2_processed_data.csv')\n",
     "processed_data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": null,
    "id": "c7c3adb5",
    "metadata": {},
    "outputs": [
@@ -445,6 +450,7 @@
     }
    ],
    "source": [
+    "#Loading the processed data - the cleaned dataset that is prepared for visualisation and modelling\n",
     "cleaned_data = pd.read_csv(r'C:\\Projects\\a_health_data_analysis\\firebase-health-data-analysis\\data\\cleaned_data.csv')\n",
     "cleaned_data.head()"
    ]
@@ -454,7 +460,9 @@
    "id": "8f7e98c7",
    "metadata": {},
    "source": [
-    "# Data Preparation"
+    "# Data Preparation\n",
+    "\n",
+    "Basic Preparation for Model Training"
    ]
   },
   {
@@ -555,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": null,
    "id": "2a817bc5",
    "metadata": {},
    "outputs": [
@@ -1101,6 +1109,7 @@
     }
    ],
    "source": [
+    "#Labelling the data to generate the label for model\n",
     "def classify_health(row):\n",
     "    # Poor Health Conditions\n",
     "    if (row['sleep_duration_hours'] < 6.5 or  \n",
@@ -1125,7 +1134,7 @@
     "    else:\n",
     "        return 'Moderate'\n",
     "    \n",
-    "#Applying the function to the cleaned data\n",
+    "#Applying the function to the cleaned data, generating the label called 'Health Category'\n",
     "cleaned_data['health_category'] = cleaned_data.apply(classify_health, axis=1)\n",
     "cleaned_data"
    ]
@@ -1135,12 +1144,12 @@
    "id": "75842b86",
    "metadata": {},
    "source": [
-    "## One Hot Encoding"
+    "## Feature Encoding"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": null,
    "id": "26bb0521",
    "metadata": {},
    "outputs": [
@@ -1235,7 +1244,7 @@
     }
    ],
    "source": [
-    "#One-Hot Encoding for Sleep Quality\n",
+    "#Applying One-Hot Encoding for Sleep Quality\n",
     "cleaned_data_X = pd.get_dummies(cleaned_data, columns=['sleep_quality'],prefix=['sleep_quality'], drop_first=True, dtype=int)\n",
     "cleaned_data_X = cleaned_data_X.drop(['health_category'], axis = 1)\n",
     "cleaned_data_X.tail(1)"
@@ -1243,7 +1252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": null,
    "id": "15fe7f1e",
    "metadata": {},
    "outputs": [
@@ -1386,8 +1395,7 @@
     }
    ],
    "source": [
-    "from sklearn.preprocessing import OrdinalEncoder\n",
-    "\n",
+    "#Applying Ordinal Encoding for the Label (Health Category)\n",
     "order = ['Poor','Moderate','Good']\n",
     "Or_hc = OrdinalEncoder(categories = [order])\n",
     "Or_hc = Or_hc.fit(cleaned_data[['health_category']])\n",
@@ -1401,7 +1409,7 @@
    "id": "43b03ea0",
    "metadata": {},
    "source": [
-    "## Scaling"
+    "## Scaling Numeric Features"
    ]
   },
   {
@@ -1426,12 +1434,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": null,
    "id": "f4e4782f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Train-Test Split\n",
+    "#Splitting teh dataset into traina nd test split of 80-20\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "    X_scaled, \n",
     "    cleaned_data_y['health_rank'], \n",
@@ -1446,21 +1454,20 @@
    "id": "dc5226dd",
    "metadata": {},
    "source": [
-    "# Training Models"
+    "# Model Training"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": null,
    "id": "d262ccce",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 3: Train Random Forest Classifier\n",
+    "#Training Random Forest Classifier\n",
     "rf = RandomForestClassifier(n_estimators=100, random_state=42)\n",
     "rf.fit(X_train, y_train)\n",
-    "\n",
-    "# Step 4: Evaluation\n",
+    "#Evaluation\n",
     "y_pred = rf.predict(X_test)"
    ]
   },
@@ -1511,7 +1518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": null,
    "id": "c35836b6",
    "metadata": {},
    "outputs": [
@@ -1527,17 +1534,11 @@
     }
    ],
    "source": [
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn.metrics import confusion_matrix\n",
-    "\n",
-    "# Generate confusion matrix\n",
+    "#Plotting confusion matrix\n",
     "cm = confusion_matrix(y_test, y_pred)\n",
-    "\n",
-    "# Define class labels\n",
+    "#Defining class labels\n",
     "labels = ['Poor', 'Moderate', 'Good']\n",
-    "\n",
-    "# Plot confusion matrix\n",
+    "#Plotting confusion matrix\n",
     "plt.figure(figsize=(6,5))\n",
     "sns.heatmap(cm, annot=True, fmt='d', cmap='Blues', xticklabels=labels, yticklabels=labels)\n",
     "plt.title('Confusion Matrix')\n",
@@ -1557,7 +1558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": null,
    "id": "214bf1d4",
    "metadata": {},
    "outputs": [
@@ -1573,13 +1574,9 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "\n",
     "# Plotting feature importances\n",
     "feature_importances = pd.Series(rf.feature_importances_, index=cleaned_data_X.columns)\n",
     "top_features = feature_importances.sort_values(ascending=False).head(10)\n",
-    "\n",
     "plt.figure(figsize=(10,6))\n",
     "sns.barplot(x=top_features, y=top_features.index)\n",
     "plt.title(\"Top 10 Feature Importances - Random Forest\")\n",
